# Recommender_system

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
models/: popularity_weighted.pkl  svd_best.pkl  time_decay.pkl
notebooks/: 01-data_exploration.ipynb  02_baseline_model.ipynb  03-colaborative_filtering.ipynb  04_content_based.ipynb
src/: __init__.py  data_loader.py  evaluation.py  preprocess.py  utils.py
src/recommenders/: __init__.py  base.py  collaborative.py  content_based.py  popularity.py
