[project]
name = "reccomendation-system"
version = "0.1.0"
description = "A comprehensive, modular framework for building and comparing recommendation algorithms from scratch to production-ready systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "implicit>=0.7.2",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
